--- a/index_clientes.html
+++ b/index_clientes.html
@@ -101,15 +101,10 @@
 
         <article class="PS5_details">
             <div class="PS5_consoleImage">
-                <img src="Images/tabla-empleados1.png" alt="ps5 console" width="900px" height="auto">
+                <img src="Images/tbl_clientes.png" alt="ps5 console" width="900px" height="auto" style="margin-bottom: 4%;">
             </div>
         </article>
 
-        <article class="PS5_details">
-            <div class="PS5_consoleImage" style="margin: 40px;">
-                <img src="Images/tabla-empleados2.png" alt="ps5 console" width="900px" height="auto">
-            </div>
-        </article>
 
         <aside class="PS5_asideContainer2">
             <div class="PS5_asideContainer">
