--- a/index_pedidos.html
+++ b/index_pedidos.html
@@ -94,13 +94,7 @@
 
         <article class="PS5_details">
             <div class="PS5_consoleImage">
-                <img src="Images/tabla-empleados1.png" alt="ps5 console" width="900px" height="auto">
-            </div>
-        </article>
-
-        <article class="PS5_details">
-            <div class="PS5_consoleImage" style="margin: 40px;">
-                <img src="Images/tabla-empleados2.png" alt="ps5 console"  width="900px" height="auto">
+                <img src="Images/tbl_pedidos.png" alt="ps5 console" width="900px" height="auto" style="margin-bottom: 4%;">
             </div>
         </article>
 
